# recovery-qt

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  INFO  Makefile  Makefile.am  Makefile.in  NEWS  README.md  WIN-AGENTS.md  config.h.cmake.in  configure.ac  create-deb.sh
.github/workflows/: release.yml
linux-universal/: Dockerfile  build.sh  docker-build-packages.sh  docker-build.sh
scripts/: format.sh  lint.sh
src/: Makefile.am  Makefile.in  alignio.h  apfs.h  apfs_common.c  apfs_common.h  askloc.c  askloc.h  btrfs.h  chgarchn.c  chgtype.c  chgtype.h  common.h  cramfs.h  dir.c  dir.h  dirn.c  exfat_dir.c  exfat_dir.h  ext2.h  ext2_common.h  ext2_dir.c  fat_dir.c  fat_dir.h  file_1cd.c  file_3dm.c  file_7z.c  file_a.c  file_ab.c  file_abr.c  file_aif.c  file_amd.c  file_amr.c  file_apa.c  file_ape.c  file_apple.c  file_arj.c  file_asl.c  file_asm.c  file_au.c  (+243 more)
src/common/: format_utils.hpp  theme.hpp
src/core/: backup.c  backup.h  carver.c  common.c  common.h  crc.c  crc.h  default_location.c  dir.c  dir.h  dir_common.h  file_list.c  geometry.c  geometry.h  ghostscan.c  ghostscan.h  log.c  log.h  misc.c  misc.h  pcarver.c  progress.c  pscanner.c  psession.c  restore.c  scanner.c  session.c  session.h  setdate.c  setdate.h  stubs.c  tree.c  utfsize.c
src/disk/: autoset.c  autoset.h  chgtype.c  chgtype.h  fnctdsk.c  fnctdsk.h  hdaccess.c  hdaccess.h  hdcache.c  hdcache.h  hidden.c  hidden.h  hpa_dco.c  hpa_dco.h  intrf.c  intrf.h  iso.c  iso.h  list_sort.c  list_sort.h  log_part.c  log_part.h  next.c  next.h  partauto.c  partauto.h  partgpt.c  partgpt.h  partgptw.c  parthumax.c  parthumax.h  parti386.c  parti386.h  partmac.c  partmac.h  partnone.c  partsun.c  partsun.h  partxbox.c  partxbox.h  (+3 more)
src/formats/: file_1cd.c  file_3dm.c  file_3ds.c  file_7z.c  file_DB.c  file_a.c  file_ab.c  file_abr.c  file_acb.c  file_ace.c  file_ado.c  file_afdesign.c  file_ahn.c  file_aif.c  file_all.c  file_als.c  file_amd.c  file_amr.c  file_apa.c  file_ape.c  file_apple.c  file_ari.c  file_arj.c  file_asf.c  file_asl.c  file_asm.c  file_atd.c  file_au.c  file_axp.c  file_axx.c  file_bac.c  file_bdm.c  file_berkeley.c  file_bfa.c  file_bim.c  file_bin.c  file_binvox.c  file_bkf.c  file_bld.c  file_bmp.c  (+323 more)
src/fs/: analyse.c  analyse.h  apfs.c  apfs.h  apfs_common.c  apfs_common.h  bfs.c  bfs.h  bsd.c  bsd.h  btrfs.c  btrfs.h  cramfs.c  cramfs.h  exfat.c  exfat.h  exfat_dir.c  exfat_dir.h  ext2.c  ext2.h  ext2_common.c  ext2_common.h  ext2_dir.c  ext2_dir.h  ext2_inc.h  f2fs.c  f2fs.h  f2fs_fs.h  fat.c  fat.h  fat_common.c  fat_common.h  fat_dir.c  fat_dir.h  fatx.c  fatx.h  gfs2.c  gfs2.h  hfs.c  hfs.h  (+57 more)
src/include/: alignio.h  ewf.h  guid_cmp.h  guid_cpy.h  iso9660.h  lang.h  list.h  list_add_sorted.h  memmem.h  msdos.h  ole.h  pe.h  progress.h  recovery.h  sudo.h  suspend.h  types.h
src/resources/: recovery-qt.desktop
src/ui/: aboutdialog.cpp  aboutdialog.hpp  browserwidget.cpp  browserwidget.hpp  diskselectionwidget.cpp  diskselectionwidget.hpp  formatselectordialog.cpp  formatselectordialog.hpp  imagepreviewdialog.cpp  imagepreviewdialog.hpp  lukspassworddialog.cpp  lukspassworddialog.hpp  mainwindow.cpp  mainwindow.hpp  partitionselectionwidget.cpp  partitionselectionwidget.hpp  progressdialog.cpp  progressdialog.hpp
src/wrappers/: carver.cpp  carver.hpp  disk.cpp  disk.hpp  filetreemodel.cpp  filetreemodel.hpp  ghostfinder.cpp  ghostfinder.hpp  luksmanager.cpp  luksmanager.hpp  partitionlist.cpp  partitionlist.hpp  photorec_qt_global.hpp  progresscallback.cpp  progresscallback.hpp  restorer.cpp  restorer.hpp  scanner.cpp  scanner.hpp  sessionmanager.cpp  sessionmanager.hpp  signatureregistry.cpp  signatureregistry.hpp  simpleworker.cpp  simpleworker.hpp  workerbase.cpp  workerbase.hpp
win/: Dockerfile  README.md  build.sh  config.h.cmake.in  docker-build.sh  recovery-qt.manifest  recovery-qt.rc  toolchain.cmake
win/src/: core_test_win.c  mingw_compat.c
win/stubs/: grp.h  pwd.h  syslog.h
